2025-07-30T13:01:10Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16623261480 # 1130
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-30
* notice: last 14d: unq all: 7 69
* notice: prev accum: outdated-unq outdated-all / unq all: 1144 5705 / 1153 5777
* notice: next accum: outdated-unq outdated-all / unq all: 1145 5708 / 1153 5777
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2025-07-16] / []

2025-07-30T02:26:27Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16611969204 # 1129
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-30
* notice: last 14d: unq all: 8 72
* notice: prev accum: outdated-unq outdated-all / unq all: 1144 5705 / 1151 5774
* notice: next accum: outdated-unq outdated-all / unq all: 1144 5705 / 1153 5777
* notice: prev exec diff / last date diff / accum: unq all: +2 +3 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2025-07-29]

2025-07-29T02:35:05Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16585185968 # 1127
* notice: Stats Output Repository: https://github.com/andry81-stats/contools--gh-stats/commits?branch=master&time_zone=utc&until=2025-07-29
* notice: last 14d: unq all: 6 69
* notice: prev accum: outdated-unq outdated-all / unq all: 1144 5705 / 1150 5772
* notice: next accum: outdated-unq outdated-all / unq all: 1144 5705 / 1151 5774
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +2 +3 -0 -0 / 2 3
* notice: removed / changed dates: [] / [2025-07-28]

2025-07-28T13:00:36Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/16569728097 # 1126