@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2025-07-30T13:01:10Z",
+  "timestamp" : "2025-07-31T12:59:25Z",
   "count_outdated" : 5708,
   "uniques_outdated" : 1145,
-  "count" : 5777,
-  "uniques" : 1153,
+  "count" : 5778,
+  "uniques" : 1154,
   "views" : [
     {
       "timestamp": "2025-07-23T00:00:00Z",
@@ -49,6 +49,15 @@
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
+    },
+    {
+      "timestamp": "2025-07-31T00:00:00Z",
+      "count": 1,
+      "count_minmax": [ 1, 1 ],
+      "count_decinc": [ 0, 1 ],
+      "uniques": 1,
+      "uniques_minmax": [ 1, 1 ],
+      "uniques_decinc": [ 0, 1 ]
     }
   ]
 }
