@@ -1,5 +1,5 @@
 {
-  "count": 69,
+  "count": 70,
   "uniques": 7,
   "views": [
     {
@@ -26,6 +26,11 @@
       "timestamp": "2025-07-29T00:00:00Z",
       "count": 3,
       "uniques": 2
+    },
+    {
+      "timestamp": "2025-07-31T00:00:00Z",
+      "count": 1,
+      "uniques": 1
     }
   ]
 }
